# GroundStationUI

./: .gitignore  CMakeLists.txt  README.md  RelayStatuses.cpp  RelayStatuses.h  Sensors.cpp  compile.bat  compile.sh  compileExtraSmall.bat  compileFast.bat  compileFast.sh  compileSmall.bat  main.cpp  mainLinux  mainLinuxFast  outputUITEST.txt  outputUITESTREAL.txt  outputUITESTREALf.txt
DataComponents/: DataParser.cpp  DataParser.h  FileReader.cpp  FileReader.h
SDL_FontCache/: SDL_fontcache.cpp  SDL_fontcache.h
VisualComponents/: ProgramStatusSymbol.cpp  ProgramStatusSymbol.h  RelayStatuses.cpp  RelayStatuses.h  Sensors.cpp  Sensors.h
